tests/declare_var/test.js
declare var x: T;

0 as T; // OK
null as T; // error: null ~> number

type T = number;
